--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.decomposition import PCA\n",
     "from custom_transformers import LogTransformer\n",
+    "from sklearn.preprocessing import PowerTransformer\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
     "import os\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,37 +287,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encoding(df, filter_sector=None):\n",
+    "def encoding(df):\n",
     "    \"\"\"\n",
     "    Split the DataFrame into development and testing sets and encode the columns.\n",
     "    \"\"\"\n",
-    "\n",
-    "    if filter_sector:\n",
-    "        df = df[df['Industry Sector'].isin(filter_sector)]\n",
     "\n",
     "    X = df.drop(columns=['Offer To 1st Close'])\n",
     "    y = df['Offer To 1st Close']\n",
     "    \n",
     "    X_dev, X_test, y_dev, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
+    "    X_train, X_val, y_train, y_val = train_test_split(X_dev, y_dev, test_size=0.2, random_state=42, shuffle=True)\n",
     "\n",
-    "    for col in X_dev.columns:\n",
+    "    # FILL MISSING VALUES\n",
+    "    for col in X_train.columns:\n",
     "        if col in ['Trade Month', 'Trade Day', 'Trade Year']:\n",
-    "            X_dev[col] = X_dev[col].fillna(X_dev[col].mode()[0])\n",
-    "            X_test[col] = X_test[col].fillna(X_dev[col].mode()[0])\n",
-    "        elif X_dev[col].dtype == 'object':\n",
-    "            X_dev[col] = X_dev[col].fillna(X_dev[col].mode()[0])\n",
-    "            X_test[col] = X_test[col].fillna(X_dev[col].mode()[0])\n",
+    "            X_train[col] = X_train[col].fillna(X_train[col].mode()[0])\n",
+    "            X_val[col] = X_val[col].fillna(X_train[col].mode()[0])\n",
+    "            X_test[col] = X_test[col].fillna(X_train[col].mode()[0])\n",
+    "        elif X_train[col].dtype == 'object':\n",
+    "            X_train[col] = X_train[col].fillna(X_train[col].mode()[0])\n",
+    "            X_val[col] = X_val[col].fillna(X_train[col].mode()[0])\n",
+    "            X_test[col] = X_test[col].fillna(X_train[col].mode()[0])\n",
     "        else:\n",
-    "            X_dev[col] = X_dev[col].fillna(X_dev[col].mean())\n",
+    "            X_train[col] = X_train[col].fillna(X_train[col].mean())\n",
+    "            X_val[col] = X_val[col].fillna(X_train[col].mean())\n",
     "            X_test[col] = X_test[col].fillna(X_test[col].mean())\n",
     "\n",
-    "    assert not X_dev.isnull().any().any(), \"Missing values found in development set\"\n",
-    "    assert not X_test.isnull().any().any(), f\"{X_test.isnull().sum().sum()} missing values found in test set\"\n",
     "\n",
+    "    # ENCODE TARGET VARIABLE\n",
+    "    yeo = PowerTransformer(method='yeo-johnson')\n",
+    "    y_train = yeo.fit_transform(y_train.values.reshape(-1, 1)).flatten()\n",
+    "    y_val = yeo.transform(y_val.values.reshape(-1, 1)).flatten()\n",
+    "    y_test = yeo.transform(y_test.values.reshape(-1, 1)).flatten()\n",
+    "\n",
+    "    # ENCODING FEATURES\n",
     "    oe_columns = ['Trade Month', 'Trade Day', 'Trade Year']\n",
     "    ohe_columns = ['Industry Sector', 'Industry Group', 'Industry Subgroup']\n",
     "    log_columns = ['Offer Price', 'Market Cap at Offer (M)']\n",
@@ -335,30 +343,29 @@
     "        ('oe', oe, oe_columns)\n",
     "    ], remainder='passthrough')\n",
     "\n",
-    "    transformed_dev = preprocess.fit_transform(X_dev)\n",
+    "    transformed_train = preprocess.fit_transform(X_train)\n",
+    "    transformed_val = preprocess.transform(X_val)\n",
     "    transformed_test = preprocess.transform(X_test)\n",
     "\n",
     "    features = preprocess.get_feature_names_out()\n",
     "\n",
-    "    df_dev = pd.DataFrame(transformed_dev, columns=features)\n",
+    "    df_train = pd.DataFrame(transformed_train, columns=features)\n",
+    "    df_val = pd.DataFrame(transformed_val, columns=features)\n",
     "    df_test = pd.DataFrame(transformed_test, columns=features)\n",
     "\n",
-    "    df_dev['Offer To 1st Close'] = y_dev.reset_index(drop=True)\n",
-    "    df_test['Offer To 1st Close'] = y_test.reset_index(drop=True)\n",
+    "    df_train['Offer To 1st Close'] = y_train\n",
+    "    df_val['Offer To 1st Close'] = y_val\n",
+    "    df_test['Offer To 1st Close'] = y_test\n",
     "\n",
-    "    assert not df_dev.isna().any().any(), \"Missing values found in development set\"\n",
-    "    assert len(df_dev.columns) == len(df_test.columns), \"Mismatch in number of features\"\n",
-    "    assert 'Offer To 1st Close' in df_dev.columns and 'Offer To 1st Close' in df_test.columns, \"Target column missing\"\n",
-    "\n",
-    "    return df_dev, df_test\n",
+    "    return df_train, df_val, df_test, yeo, preprocess\n",
     "\n",
     "\n",
-    "df_dev_encoding, df_test_encoding = encoding(df_drop_columns)"
+    "df_train_encoded, df_val_encoded, df_test_encoded, yeo, preprocess = encoding(df_drop_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -367,35 +374,35 @@
      "text": [
       "\n",
       "Feature Importances:\n",
-      "log__Offer Price                                 0.525591\n",
-      "ss__Offer Size (M)                               0.103126\n",
-      "ohe__Industry Subgroup_Wound/Burn & Skin Care    0.066806\n",
-      "ss__Prev_5_IPOs_Avg_Return                       0.057056\n",
-      "ohe__Industry Subgroup_Brewery                   0.045546\n",
-      "oe__Trade Day                                    0.036189\n",
-      "ohe__Industry Subgroup_Collectibles              0.031060\n",
-      "ss__Unemployment Rate                            0.022215\n",
-      "ss__Fed Rate                                     0.013801\n",
-      "ss__Return on Assets                             0.012144\n",
+      "log__Offer Price                   0.243283\n",
+      "ss__Offer Size (M)                 0.104284\n",
+      "log__Market Cap at Offer (M)       0.055430\n",
+      "ss__Shares Outstanding (M)         0.048082\n",
+      "ss__Instit Owner (% Shares Out)    0.042401\n",
+      "ss__Sales - 1 Yr Growth            0.040779\n",
+      "ss__Prev_5_IPOs_Avg_Return         0.034605\n",
+      "ss__Return on Assets               0.030186\n",
+      "ss__Profit Margin                  0.029869\n",
+      "ss__Cash Flow per Share            0.028547\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "def show_feature_importance(df_dev):\n",
+    "def show_feature_importance(df):\n",
     "    \"\"\"\n",
     "    Calculate feature importance using a simple model\n",
     "    \"\"\"\n",
-    "    X_dev = df_dev.drop(columns=['Offer To 1st Close'])\n",
-    "    y_dev = df_dev['Offer To 1st Close']\n",
+    "    X_train = df.drop(columns=['Offer To 1st Close'])\n",
+    "    y_train = df['Offer To 1st Close']\n",
     "    \n",
     "    rf = RandomForestRegressor(random_state=42)\n",
-    "    rf.fit(X_dev, y_dev)\n",
-    "    importances = pd.Series(rf.feature_importances_, index=X_dev.columns)\n",
+    "    rf.fit(X_train, y_train)\n",
+    "    importances = pd.Series(rf.feature_importances_, index=X_train.columns)\n",
     "    print(\"\\nFeature Importances:\")\n",
     "    print(importances.sort_values(ascending=False).head(10))\n",
     "\n",
-    "show_feature_importance(df_dev_encoding)\n"
+    "show_feature_importance(df_train_encoded)\n"
    ]
   },
   {
@@ -404,38 +411,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_correlation(df_dev, df_test):\n",
+    "def get_correlation(df_train, df_val, df_test):\n",
     "    \"\"\"\n",
     "    Check correlation in the X_dev column and drop highly correlated features.\n",
     "    \"\"\"\n",
-    "    X_dev = df_dev.drop(columns=['Offer To 1st Close'])\n",
-    "    y_dev = df_dev['Offer To 1st Close']\n",
+    "    X_train = df_train.drop(columns=['Offer To 1st Close'])\n",
+    "    y_train = df_train['Offer To 1st Close']\n",
+    "\n",
+    "    X_val = df_val.drop(columns=['Offer To 1st Close'])\n",
+    "    y_val = df_val['Offer To 1st Close']\n",
     "\n",
     "    X_test = df_test.drop(columns=['Offer To 1st Close'])\n",
     "    y_test = df_test['Offer To 1st Close']\n",
     "\n",
-    "    corr_matrix = X_dev.corr().abs()\n",
+    "    corr_matrix = X_train.corr().abs()\n",
     "    upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
     "    to_drop = [column for column in upper.columns if any(upper[column] >= 0.9)]\n",
     "\n",
-    "    X_reduced = X_dev.drop(columns=to_drop)\n",
+    "    X_reduced_train = X_train.drop(columns=to_drop)\n",
+    "    X_reduced_val = X_val.drop(columns=to_drop)\n",
     "    X_reduced_test = X_test.drop(columns=to_drop)\n",
     "\n",
-    "    df_dev = pd.concat([X_reduced, y_dev.reset_index(drop=True)], axis=1)\n",
+    "    df_train = pd.concat([X_reduced_train, y_train.reset_index(drop=True)], axis=1)\n",
+    "    df_val = pd.concat([X_reduced_val, y_val.reset_index(drop=True)], axis=1)\n",
     "    df_test = pd.concat([X_reduced_test, y_test.reset_index(drop=True)], axis=1)\n",
     "\n",
     "    print(f\"Removed {len(to_drop)} correlated features.\")\n",
     "\n",
+    "    df_train.to_csv('./output_csv/Final_Output_Reg_train.csv', index=False)\n",
+    "    df_val.to_csv('./output_csv/Final_Output_Reg_val.csv', index=False)\n",
     "    df_test.to_csv('./output_csv/Final_Output_Reg_test.csv', index=False)\n",
     "\n",
-    "    return df_dev, df_test\n",
+    "    return df_train, df_val, df_test\n",
     "\n",
-    "df_dev_correlation, df_test_correlation = get_correlation(df_dev_encoding, df_test_encoding)"
+    "df_train_correlation, df_val_correlation, df_test_correlation = get_correlation(df_train_encoded, df_val_encoded, df_test_encoded)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +503,7 @@
     "    df_filtered.to_csv(outfile, index=False)\n",
     "    return df_filtered, bounds\n",
     "\n",
-    "df_dev_filtered, bounds = checkoutliers(df_dev_correlation, './output_csv/Final_Output_Reg_dev.csv')"
+    "df_dev_filtered, bounds = checkoutliers(df_train_correlation, './output_csv/Final_Output_Reg_train.csv')"
    ]
   },
   {
@@ -582,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +724,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_models(model_params, X_train, y_train, X_val, y_val):\n",
+    "def evaluate_models(model_params, X_train, y_train, X_val, y_val, yeo):\n",
     "    \"\"\"Evaluate models with RMSE as the primary metric\"\"\"\n",
     "    results = []\n",
     "\n",
@@ -742,6 +757,7 @@
     "            cv_scores = -cv_scores\n",
     "\n",
     "            y_pred = best_model.predict(X_val)\n",
+    "            y_pred = yeo.inverse_transform(y_pred)\n",
     "            rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
     "            mae = mean_absolute_error(y_val, y_pred)\n",
     "            r2 = r2_score(y_val, y_pred)\n",
@@ -829,6 +845,9 @@
     "    X_test, y_test = split_data(df_test)\n",
     "    X_test = clean_column_names(X_test)\n",
     "\n",
+    "    X_test = preprocess.transform(X_test)\n",
+    "    y_test = yeo.transform(y_test)\n",
+    "\n",
     "    best_model_name = top5_models_df.iloc[0]['Model']\n",
     "    best_model = model_params[best_model_name]['model']\n",
     "    best_model.fit(X, y)\n",
@@ -870,13 +889,14 @@
     "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "        model_params = get_enhanced_model_params()\n",
-    "        results_df, top5_models_df = evaluate_models(model_params, X_train, y_train, X_val, y_val)\n",
+    "        results_df, top5_models_df = evaluate_models(model_params, X_train, y_train, X_val, y_val, yeo)\n",
     "\n",
     "        print(\"\\nTop 5 Models:\")\n",
     "        display(top5_models_df)\n",
     "\n",
     "        results_df.to_csv('./output_csv/regression_results.csv', index=False)\n",
     "        top5_models_df.to_csv('./output_csv/top5_regression_models.csv', index=False)\n",
+    "\n",
     "\n",
     "        evaluate_best_model(model_params, X, y, top5_models_df)\n",
     "        \n",
