--- a/data_exploration/initial_data_exploration.ipynb
+++ b/data_exploration/initial_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 225,
    "id": "02253a5c-ce9d-4bfd-9077-3ccafd6a06e6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 226,
    "id": "87ac952d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 227,
    "id": "e51c2d8a",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 228,
    "id": "554aec3f",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 229,
    "id": "ddab97f4",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "max     325.659000           112.000000          14.800000  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,15 +380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 230,
    "id": "c032f091",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4719, 24)"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = df[df['Offer Size (M)'] > 0]\n",
     "df = df[~((df['Offer To 1st Close'] < 0) & (df['Offer To 1st Close'].abs() >= df['Offer Price']))]\n",
     "df = df[df['Offer To 1st Close'].abs() < 3*df['Offer Price']]\n",
-    "df.to_csv('../build_dataset/output_csv/bloomberg_data.csv', index=False)"
+    "df.to_csv('../build_dataset/output_csv/bloomberg_data.csv', index=False)\n",
+    "df.shape"
    ]
   },
   {
@@ -401,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 231,
    "id": "7228cf02",
    "metadata": {},
    "outputs": [
@@ -428,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 232,
    "id": "ceac34dd",
    "metadata": {},
    "outputs": [
@@ -585,7 +597,7 @@
        "Unemployment Rate               65"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 233,
    "id": "649b8c2f",
    "metadata": {},
    "outputs": [
@@ -653,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 234,
    "id": "8231afab",
    "metadata": {},
    "outputs": [
@@ -793,7 +805,7 @@
        "Industry Subgroup                         1    0.021191"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 235,
    "id": "2990731e",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 236,
    "id": "d80b4d01",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 237,
    "id": "3abd6da9",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 238,
    "id": "884ebf2f",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 239,
    "id": "8a373e92",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 240,
    "id": "38900300",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 241,
    "id": "7121c5ae",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 242,
    "id": "fbe64fce",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 243,
    "id": "f4a9ec79",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 244,
    "id": "97111999",
    "metadata": {},
    "outputs": [
