--- a/data_analysis/regression.ipynb
+++ b/data_analysis/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,9 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train.shape before encoding: (3020, 21)\n",
+      "X_val.shape before encoding: (755, 21)\n",
+      "X_test.shape before encoding: (944, 21)\n",
+      "\n",
+      "ss_columns: 13\n",
+      "oe_columns: 3\n",
+      "ohe_columns: 3\n",
+      "log_columns: 2\n",
+      "\n",
+      "X_train.shape after encoding: (3020, 416)\n",
+      "X_val.shape after encoding: (755, 416)\n",
+      "X_test.shape after encoding: (944, 416)\n"
+     ]
+    }
+   ],
    "source": [
     "def encoding(df):\n",
     "    \"\"\"\n",
@@ -311,7 +330,7 @@
     "            X_train[col] = X_train[col].fillna(X_train[col].mode()[0])\n",
     "            X_val[col] = X_val[col].fillna(X_train[col].mode()[0])\n",
     "            X_test[col] = X_test[col].fillna(X_train[col].mode()[0])\n",
-    "        elif X_train[col].dtype == 'object' and col not in ['Trade Month', 'Trade Day', 'Trade Year']:\n",
+    "        elif X_train[col].dtype == 'object':\n",
     "            X_train[col] = X_train[col].fillna(X_train[col].mode()[0])\n",
     "            X_val[col] = X_val[col].fillna(X_train[col].mode()[0])\n",
     "            X_test[col] = X_test[col].fillna(X_train[col].mode()[0])\n",
@@ -320,6 +339,9 @@
     "            X_val[col] = X_val[col].fillna(X_train[col].mean())\n",
     "            X_test[col] = X_test[col].fillna(X_test[col].mean())\n",
     "\n",
+    "    print(f\"X_train.shape before encoding: {X_train.shape}\")\n",
+    "    print(f\"X_val.shape before encoding: {X_val.shape}\")\n",
+    "    print(f\"X_test.shape before encoding: {X_test.shape}\")\n",
     "\n",
     "    # ENCODING FEATURES\n",
     "    oe_columns = ['Trade Month', 'Trade Day', 'Trade Year']\n",
@@ -327,6 +349,11 @@
     "    log_columns = ['Offer Price', 'Market Cap at Offer (M)']\n",
     "    exclude_columns = oe_columns + log_columns + ohe_columns\n",
     "    ss_columns = [col for col in X.select_dtypes(exclude=['object']).columns if col not in exclude_columns]\n",
+    "\n",
+    "    print(f\"\\nss_columns: {len(ss_columns)}\")\n",
+    "    print(f\"oe_columns: {len(oe_columns)}\")\n",
+    "    print(f\"ohe_columns: {len(ohe_columns)}\")\n",
+    "    print(f\"log_columns: {len(log_columns)}\")\n",
     "\n",
     "    oe = OrdinalEncoder()\n",
     "    log = LogTransformer()\n",
@@ -350,6 +377,10 @@
     "    df_val = pd.DataFrame(transformed_val, columns=features).reset_index(drop=True)\n",
     "    df_test = pd.DataFrame(transformed_test, columns=features).reset_index(drop=True)\n",
     "\n",
+    "    print(f\"\\nX_train.shape after encoding: {df_train.shape}\")\n",
+    "    print(f\"X_val.shape after encoding: {df_val.shape}\")\n",
+    "    print(f\"X_test.shape after encoding: {df_test.shape}\")\n",
+    "\n",
     "    y_train = y_train.reset_index(drop=True)\n",
     "    y_val = y_val.reset_index(drop=True)\n",
     "    y_test = y_test.reset_index(drop=True)\n",
@@ -361,12 +392,12 @@
     "    return df_train, df_val, df_test, preprocess\n",
     "\n",
     "\n",
-    "df_train_encoded, df_val_encoded, df_test_encoded, preprocess = encoding(df_drop_columns)"
+    "df_train_encoded, df_val_encoded, df_test_encoded, preprocess = encoding(df_drop_columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,15 +511,15 @@
     "    df_filtered = df_filtered[residuals.abs() < 3 * residuals.std()]\n",
     "    \n",
     "    print(f\"Removed outliers.\")\n",
-    "    print(f\"Original count: {len(df)}\")\n",
-    "    print(f\"After IQR filtering: {len(df_filtered)}\")\n",
+    "    print(f\"Original shape: {df.shape}\")\n",
+    "    print(f\"After IQR filtering: {df_filtered.shape}\")\n",
     "    \n",
     "    return df_filtered, (lower_bound, upper_bound)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -569,8 +600,8 @@
       "\n",
       "Checking for outliers...\n",
       "Removed outliers.\n",
-      "Original count: 3020\n",
-      "After IQR filtering: 2699\n"
+      "Original shape: (3020, 385)\n",
+      "After IQR filtering: (2699, 385)\n"
      ]
     }
    ],
