--- a/build_dataset/build_dataset.ipynb
+++ b/build_dataset/build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bloomberg.drop(columns=['Trade Date (US) FoM'], inplace=True)"
+    "df_bloomberg.drop(columns=['Trade Date (US) FoM'], inplace=True)\n",
+    "df_bloomberg['Offer To 1st Close'] /= df_bloomberg['Offer Price']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9275, 24)"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_bloomberg.to_csv('./output_csv/bloomberg_data.csv', index=False)\n"
+    "df_bloomberg.to_csv('./output_csv/bloomberg_data.csv', index=False)\n",
+    "df_bloomberg.shape\n"
    ]
   }
  ],
