--- a/build_dataset/build_dataset.ipynb
+++ b/build_dataset/build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,17 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bloomberg.drop(columns=['Trade Date (US) FoM'], inplace=True)\n",
-    "df_bloomberg['Offer To 1st Close'] /= df_bloomberg['Offer Price']\n"
+    "df_bloomberg.drop(columns=['Trade Date (US) FoM'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +133,7 @@
        "(9275, 24)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
